--- a/TweetApp/Base.lproj/Main.storyboard
+++ b/TweetApp/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TweetApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnF-9H-0G3">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TweetApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5l-WO-48r">
+                                        <rect key="frame" x="97.5" y="26" width="180" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="180" id="BOp-lR-xTc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZyS-1F-SXt">
+                                        <rect key="frame" x="347" y="30" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="A2e-vL-vNG"/>
+                                            <constraint firstAttribute="height" constant="20" id="MyT-rU-fV3"/>
+                                        </constraints>
+                                        <state key="normal" image="pencil.png"/>
+                                        <connections>
+                                            <action selector="tapTweetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="deo-62-7gB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="8oV-05-n6o"/>
+                                    <constraint firstAttribute="bottom" secondItem="z5l-WO-48r" secondAttribute="bottom" constant="10" id="Fva-NX-jux"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZyS-1F-SXt" secondAttribute="bottom" constant="10" id="JCu-WO-ZbP"/>
+                                    <constraint firstItem="z5l-WO-48r" firstAttribute="centerX" secondItem="bnF-9H-0G3" secondAttribute="centerX" id="W6O-jT-2C9"/>
+                                    <constraint firstItem="ZyS-1F-SXt" firstAttribute="trailing" secondItem="bnF-9H-0G3" secondAttribute="trailingMargin" id="Yh6-Zd-sou"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header.png" translatesAutoresizingMaskIntoConstraints="NO" id="3xY-19-6HN">
+                                <rect key="frame" x="0.0" y="60" width="375" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="VxB-er-Csc"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YlU-Yr-rSu">
+                                <rect key="frame" x="0.0" y="260" width="375" height="407"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YlU-Yr-rSu" secondAttribute="bottom" id="OZ1-Th-sZd"/>
+                            <constraint firstItem="YlU-Yr-rSu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QxT-ee-7Xc"/>
+                            <constraint firstAttribute="trailing" secondItem="3xY-19-6HN" secondAttribute="trailing" id="YMt-Sb-L9h"/>
+                            <constraint firstAttribute="trailing" secondItem="YlU-Yr-rSu" secondAttribute="trailing" id="cmz-5N-Cpy"/>
+                            <constraint firstItem="bnF-9H-0G3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eNy-eM-z8i"/>
+                            <constraint firstItem="3xY-19-6HN" firstAttribute="top" secondItem="bnF-9H-0G3" secondAttribute="bottom" id="faw-tr-HmF"/>
+                            <constraint firstItem="bnF-9H-0G3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i6k-IF-DWJ"/>
+                            <constraint firstItem="3xY-19-6HN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="nUW-xw-cMu"/>
+                            <constraint firstAttribute="trailing" secondItem="bnF-9H-0G3" secondAttribute="trailing" id="p7N-Fp-qPF"/>
+                            <constraint firstItem="bnF-9H-0G3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tfX-Fm-Wkt"/>
+                            <constraint firstItem="YlU-Yr-rSu" firstAttribute="top" secondItem="3xY-19-6HN" secondAttribute="bottom" id="ucE-cU-NA7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="header.png" width="1552" height="962"/>
+        <image name="pencil.png" width="32" height="32"/>
+    </resources>
 </document>
