--- a/TweetApp/Base.lproj/Main.storyboard
+++ b/TweetApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,14 +19,14 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bnF-9H-0G3">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TweetApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5l-WO-48r">
-                                        <rect key="frame" x="97.5" y="26" width="180" height="24"/>
+                                        <rect key="frame" x="117" y="26" width="180" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="180" id="BOp-lR-xTc"/>
                                         </constraints>
@@ -35,7 +35,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZyS-1F-SXt">
-                                        <rect key="frame" x="347" y="30" width="20" height="20"/>
+                                        <rect key="frame" x="386" y="30" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="A2e-vL-vNG"/>
                                             <constraint firstAttribute="height" constant="20" id="MyT-rU-fV3"/>
@@ -56,33 +56,100 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header.png" translatesAutoresizingMaskIntoConstraints="NO" id="3xY-19-6HN">
-                                <rect key="frame" x="0.0" y="60" width="375" height="200"/>
+                                <rect key="frame" x="0.0" y="60" width="414" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="VxB-er-Csc"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YlU-Yr-rSu">
-                                <rect key="frame" x="0.0" y="260" width="375" height="407"/>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="163" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hjM-FO-bBF">
+                                <rect key="frame" x="20" y="270" width="374" height="456"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="myCell" rowHeight="163" id="dl5-oW-4gD">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="163"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dl5-oW-4gD" id="iNO-5U-Td9">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="162.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tor-xi-Kti">
+                                                    <rect key="frame" x="8" y="18.000000000000004" width="45" height="45.333333333333343"/>
+                                                    <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="45" id="Vn3-mr-HAQ"/>
+                                                        <constraint firstAttribute="height" constant="45" id="a6w-ae-8Qb"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAh-8z-Lvx">
+                                                    <rect key="frame" x="63" y="71.333333333333329" width="303" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="WYf-R9-MKJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDl-K9-l7l">
+                                                    <rect key="frame" x="63" y="13" width="303" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="7k9-0V-Y4K"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSS-Yj-G4i">
+                                                    <rect key="frame" x="63" y="129.66666666666666" width="303" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="PUK-AB-E04"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="MSS-Yj-G4i" secondAttribute="trailing" id="Byv-td-SOh"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="MSS-Yj-G4i" secondAttribute="bottom" constant="5" id="FBP-H6-h9o"/>
+                                                <constraint firstItem="MSS-Yj-G4i" firstAttribute="leading" secondItem="Tor-xi-Kti" secondAttribute="trailing" constant="10" id="HBf-v0-E8J"/>
+                                                <constraint firstItem="Tor-xi-Kti" firstAttribute="top" secondItem="iNO-5U-Td9" secondAttribute="topMargin" constant="10" id="KSv-qD-Brj"/>
+                                                <constraint firstItem="ZDl-K9-l7l" firstAttribute="leading" secondItem="Tor-xi-Kti" secondAttribute="trailing" constant="10" id="MhT-WH-yev"/>
+                                                <constraint firstItem="ZDl-K9-l7l" firstAttribute="top" secondItem="iNO-5U-Td9" secondAttribute="topMargin" constant="5" id="Tgu-qS-LJ0"/>
+                                                <constraint firstItem="fAh-8z-Lvx" firstAttribute="centerY" secondItem="iNO-5U-Td9" secondAttribute="centerY" id="cuc-m4-JSz"/>
+                                                <constraint firstItem="fAh-8z-Lvx" firstAttribute="leading" secondItem="Tor-xi-Kti" secondAttribute="trailing" constant="10" id="eec-Yf-dZP"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ZDl-K9-l7l" secondAttribute="trailing" id="lhK-v3-CHg"/>
+                                                <constraint firstItem="Tor-xi-Kti" firstAttribute="leading" secondItem="iNO-5U-Td9" secondAttribute="leadingMargin" id="oVR-pQ-hsV"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="fAh-8z-Lvx" secondAttribute="trailing" id="ogi-hk-jga"/>
+                                                <constraint firstItem="Tor-xi-Kti" firstAttribute="leading" secondItem="iNO-5U-Td9" secondAttribute="leadingMargin" id="rFF-H7-Kvu"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YlU-Yr-rSu" secondAttribute="bottom" id="OZ1-Th-sZd"/>
-                            <constraint firstItem="YlU-Yr-rSu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QxT-ee-7Xc"/>
+                            <constraint firstItem="hjM-FO-bBF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="T4g-Vr-6bP"/>
                             <constraint firstAttribute="trailing" secondItem="3xY-19-6HN" secondAttribute="trailing" id="YMt-Sb-L9h"/>
-                            <constraint firstAttribute="trailing" secondItem="YlU-Yr-rSu" secondAttribute="trailing" id="cmz-5N-Cpy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hjM-FO-bBF" secondAttribute="trailing" id="YUY-Js-Q7H"/>
                             <constraint firstItem="bnF-9H-0G3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eNy-eM-z8i"/>
                             <constraint firstItem="3xY-19-6HN" firstAttribute="top" secondItem="bnF-9H-0G3" secondAttribute="bottom" id="faw-tr-HmF"/>
                             <constraint firstItem="bnF-9H-0G3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i6k-IF-DWJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hjM-FO-bBF" secondAttribute="bottom" constant="10" id="kgH-WA-w8Y"/>
                             <constraint firstItem="3xY-19-6HN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="nUW-xw-cMu"/>
                             <constraint firstAttribute="trailing" secondItem="bnF-9H-0G3" secondAttribute="trailing" id="p7N-Fp-qPF"/>
+                            <constraint firstItem="hjM-FO-bBF" firstAttribute="top" secondItem="3xY-19-6HN" secondAttribute="bottom" constant="10" id="qwg-bP-etI"/>
                             <constraint firstItem="bnF-9H-0G3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tfX-Fm-Wkt"/>
-                            <constraint firstItem="YlU-Yr-rSu" firstAttribute="top" secondItem="3xY-19-6HN" secondAttribute="bottom" id="ucE-cU-NA7"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="hjM-FO-bBF" id="7I4-6c-jnm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.23188405797103" y="138.58695652173915"/>
         </scene>
     </scenes>
     <resources>
